tests/compile_tests/glut/screenhide_commands.output
-1 
-1 
Got past icon!
Got past MouseHide!
Got past MouseHide!
 0 
Got past ScreenHide
 0 
Error: 5 , Line: 34 
Error: 5 , Line: 35 
Title: foobar
 0 
 0 
Got past ScreenShow!
